snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220822.093702-3-all.jar.sha1
b0864307d7a824bdb91b3f21c397adc613a74252